--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,15 +1,7 @@
-
-@import "variables";
-
-@import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
-@import "animations";
-
-@import "lib/carousel";
-@import "lib/checkbox";
-@import "lib/menu";
-@import "lib/navigation";
-@import "lib/radio";
-@import "lib/tabs";
-
-@import "extends";
+html{
+	margin:0;
+	body{
+		padding:30px;
+		//width:30%;
+	}
+}
