--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -17,10 +17,12 @@
 	0%{
 		visibility:visible;
 		opacity:1;
+		height:auto;
 	}
 	99%{
 		visibility:visible;
 		opacity:0;
+		height:auto;
 	}
 	100%{
 		visibility:hidden;
@@ -33,13 +35,21 @@
 	0%{
 		visibility:hidden;
 		opacity:0;
+		height:0;
+	}
+	49%{
+		visibility:hidden;
+		opacity:0;
+		height:0;
 	}
 	50%{
 		visibility:visible;
 		opacity:0;
+		height:auto;
 	}
 	100%{
 		visibility:visible;
 		opacity:1;
+		height:auto;
 	}
 }
