--- a/sass/lib/_tabs.scss
+++ b/sass/lib/_tabs.scss
@@ -1,4 +1,6 @@
 [data-exalt~="tabs"]{
+	display:flex;
+	flex-direction:column;
 	.nav{
 		> li{
 			label{
@@ -11,41 +13,145 @@
 	}
 	.tab-content{
 		.tab-pane{
-
+			height:0;
 		}
 	}
-	[data-exalt~="right"]{
-
-	}
-	[data-exalt~="bottom"]{
-
-	}
-	[data-exalt~="left"]{
-
-	}
-	@for $index from 1 through $tabs-limit {
-		input[type="radio"]:nth-child(#{$index}):checked{
-			~.nav{
-				>li{
-					&:nth-child(#{$index}){
-						label{
-							&,
-							&:hover,
-							&:focus{
-								color: $nav-tabs-active-link-hover-color;
-								background-color: $nav-tabs-active-link-hover-bg;
-								border: 1px solid $nav-tabs-active-link-hover-border-color;
-								border-bottom-color: transparent;
-								cursor: default;
+	&[data-exalt~="right"]{
+		flex-direction:row;
+		.nav{
+			order:2;
+			border-left:1px solid $nav-tabs-border-color;
+			border-bottom:0;
+			> li{
+				float:none;
+				margin:0 0 2px -1px;
+				label,a{
+					display:block;
+					float:none;
+					white-space:nowrap;
+					border-radius:0 $border-radius-base $border-radius-base 0;
+					margin:0;
+					&:hover {
+						border-color:$nav-tabs-link-hover-border-color $nav-tabs-link-hover-border-color $nav-tabs-link-hover-border-color $nav-tabs-border-color;
+					}
+				}
+			}
+		}
+		@for $index from 1 through $tabs-limit{
+			input[type="radio"]:nth-child(#{$index}):checked{
+				~ .nav{
+					> li{
+						&:nth-child(#{$index}){
+							label{
+								&,
+								&:hover,
+								&:focus{
+									border:1px solid $nav-tabs-active-link-hover-border-color;
+									border-left-color:transparent;
+								}
 							}
 						}
 					}
 				}
 			}
-			~.tab-content{
+		}
+	}
+	&[data-exalt~="bottom"]{
+		.nav{
+			order:2;
+			border-top:1px solid $nav-tabs-border-color;
+			border-bottom:0;
+			> li{
+				margin:-1px 0 0;
+				label,a{
+					border-radius:0 0 $border-radius-base $border-radius-base;
+					&:hover {
+						border-color:$nav-tabs-border-color $nav-tabs-link-hover-border-color $nav-tabs-link-hover-border-color;
+					}
+				}
+			}
+		}
+		@for $index from 1 through $tabs-limit{
+			input[type="radio"]:nth-child(#{$index}):checked{
+				~ .nav{
+					> li{
+						&:nth-child(#{$index}){
+							label{
+								&,
+								&:hover,
+								&:focus{
+									border:1px solid $nav-tabs-active-link-hover-border-color;
+									border-top-color:transparent;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	&[data-exalt~="left"]{
+		flex-direction:row;
+		.nav{
+			border-right:1px solid $nav-tabs-border-color;
+			border-bottom:0;
+			> li{
+				float:none;
+				margin:0 -1px 2px 0;
+				label,a{
+					display:block;
+					float:none;
+					white-space:nowrap;
+					border-radius:$border-radius-base 0 0 $border-radius-base;
+					margin:0;
+					&:hover {
+						border-color:$nav-tabs-link-hover-border-color $nav-tabs-border-color $nav-tabs-link-hover-border-color $nav-tabs-link-hover-border-color;
+					}
+				}
+			}
+		}
+		@for $index from 1 through $tabs-limit{
+			input[type="radio"]:nth-child(#{$index}):checked{
+				~ .nav{
+					> li{
+						&:nth-child(#{$index}){
+							label{
+								&,
+								&:hover,
+								&:focus{
+									border:1px solid $nav-tabs-active-link-hover-border-color;
+									border-right-color:transparent;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	@for $index from 1 through $tabs-limit{
+		input[type="radio"]:nth-child(#{$index}):checked{
+			~ .nav{
+				> li{
+					&:nth-child(#{$index}){
+						label{
+							&,
+							&:hover,
+							&:focus{
+								color:$nav-tabs-active-link-hover-color;
+								background-color: $nav-tabs-active-link-hover-bg;
+								border:1px solid $nav-tabs-active-link-hover-border-color;
+								border-bottom-color:transparent;
+								cursor:default;
+							}
+						}
+					}
+				}
+			}
+			~ .tab-content{
 				.tab-pane{
 					&:nth-child(#{$index}){
-						display:block;
+						height:auto;
 					}
 					&.fade{
 						display:block;
