--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,6 +11,7 @@
 @import "lib/carousel";
 @import "lib/checkbox";
 @import "lib/menu";
+@import "lib/modal";
 @import "lib/navigation";
 @import "lib/radio";
 @import "lib/tabs";
