--- a/sass/lib/_modal.scss
+++ b/sass/lib/_modal.scss
@@ -1,26 +1,38 @@
 [data-exalt~="modal"]{
 	.modal{
-		background:rgba(#000,.5);
+		margin: 0;
+		width: auto;
+		border: 0;
+		background:transparent;
+		padding:0;
 		display:block;
+		visibility:hidden;
+		height:0;
+		position:fixed;
 		&.fade{
 			animation:fadeout .15s linear;
-			visibility:hidden;
 			opacity:0;
-			height:0;
 			.modal-dialog{
 				transition: transform .3s ease-out;
 				transform: translate(0,-25%);
 			}
 		}
+		.modal-backdrop{
+			opacity:0.5;
+			z-index:auto;
+			position:absolute;
+			margin:0;
+			height:400%;
+		}
 	}
 	[type="checkbox"]:checked{
 		~.modal{
+			visibility:visible;
+			height:auto;
+			overflow:auto;
 			&.fade{
 				animation:fadein .15s linear;
-				visibility:visible;
 				opacity:1;
-				height:auto;
-				overflow:auto;
 				.modal-dialog{
 					transform: translate(0,0);
 				}
