--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,6 +2,5 @@
 $animation-fade-duration:0.15s;
 // tabs
 $tabs-limit:5;
-// tabs styles
-$tabs-nav-fontsize:0.9em;
-$tabs-nav-height:3em !default;
+// accordion
+$accordion-limit:5;
