--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,6 +4,7 @@
 @import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 @import "animations";
+@import "mixins";
 
 @import "base";
 
