--- a/sass/lib/_carousel.scss
+++ b/sass/lib/_carousel.scss
@@ -1,4 +1,7 @@
 [data-exalt~="carousel"]{
+	*{
+		user-select:none;
+	}
 	.carousel{
 		.carousel-indicators{
 			margin-bottom: 10px;
@@ -35,7 +38,11 @@
 			~ .carousel{
 				.carousel-indicators{
 					label:nth-child(#{$index}){
-						@extend .active;
+						//@extend .active;
+						margin: 0;
+						width: 12px;
+						height: 12px;
+						background-color: #fff;
 					}
 				}
 				//.carousel-inner{
@@ -43,21 +50,26 @@
 					.item:first-child{
 						//margin-left:#{-100 * ($index - 1)}%;
 					}
+					.item{
+						transform:translateX(100%);
+						display:none;
+					}
 					.item:#{if($index - 1 > 0,nth-child(#{$index - 1}),last-child)}{
 						transform:translateX(-100%);
-						z-index:1;
+						display:block;
 						//@extend .active;
 					}
 					.item:nth-child(#{$index}){
 						transform:translateX(0%);
-						z-index:2;
+						display:block;
+						z-index:3;
 						//transition:transform .6s linear,z-index .01s linear .6s;
 						//@extend .active;
 					}
 					.item:#{if($index + 1 > $carousel-limit,first-child,nth-child(#{$index + 1}))}{
 						transform:translateX(100%);
 						//transition:none;
-						z-index:0;
+						display:block;
 						//@extend .active;
 					}
 				//}
@@ -69,6 +81,15 @@
 							@extend .glyphicon-chevron-left;
 						}
 						&:hover ~ .carousel-inner{
+							.item:#{if($index - 1 > 0,nth-child(#{$index - 1}),last-child)}{
+								transform:translateX(-100%);
+							}
+							//.item:nth-child(#{$index}){
+							//	transform:translateX(0%);
+							//}
+							//.item:#{if($index + 1 > $carousel-limit,first-child,nth-child(#{$index + 1}))}{
+							//	transform:translateX(100%);
+							//}
 							//.item:#{if($index - 1 > 0,nth-child(#{$index - 1}),last-child)}{
 							//	//transform:translateX(-100%);
 							//	z-index:1;
@@ -80,8 +101,9 @@
 							.item:#{if($index + 1 > $carousel-limit,first-child,nth-child(#{$index + 1}))}{
 								//transition:transform .6s linear,z-index .01s linear .6s;
 
-								transform:translateX(-100%);
-								transition:none;
+
+								//transform:translateX(-100%);
+								//transition:none;
 							}
 						}
 					}
